--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CarbaShop</title>
   <link rel="stylesheet" type="text/css" href="./css/comun.css" />
-  <!--Adjuntar aquí el resto de archivos css y js-->
+  <script src="./js/login.js"></script>
 </head>
 
 <body>
