--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div class="container">
     <h2>Login</h2>
     <form name="formulario" id="formulario">
-      <input type="text" name="nombre" id="nombre" placeholder="Login"/>
+      <input type="text" name="nombre" id="nombre" placeholder="Login" autocomplete="off"/>
       <div id="error-nombre" class="error-message"></div>
-    
+
       <input type="password" name="password" id="password" placeholder="Contraseña"/>
       <div id="error-password" class="error-message"></div>
       <div id="botones">
