--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
                 </ul>
             </nav>
             <footer>
-                <p class="texto-footer">Alumno 202X &copy;</p>
+                <p class="texto-footer">Vladimir Shmidt 2024 &copy;</p>
             </footer>
         </aside>
     </div>
