--- a/main.html
+++ b/main.html
@@ -6,7 +6,8 @@
     <title>CarbaShop</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="./css/comun.css" />
-    <script src="./js/login.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/tienda.css" />
+    <script src="./js/shop.js"></script>
 </head>
 <body>
     <div class="contenedor">
