--- a/carrito.html
+++ b/carrito.html
@@ -7,12 +7,14 @@
     <title>CarbaShop</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="./css/comun.css" />
-    <script src="./js/login.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/carro.css" />
+    <script type="text/javascript" src="./js/carro.js"></script>
+
 </head>
 <body>
     <div class="contenedor">
         <header class="header-mobile">
-            <h1 class="logo">CarbaShop</h1>
+            <h1 class="logo"><a href="./index.html">CarbaShop</a></h1>
             <button class="open-menu" id="open-menu">
                 <i class="bi bi-list"></i>
             </button>
@@ -59,6 +61,7 @@
                     </div>
                     -->
                 </div>
+                <div id="carrito-acciones" class = "carrito-acciones"></div>
                 <p id="carrito-comprado" class="carrito-comprado">Muchas gracias por tu compra. <i class="bi bi-emoji-laughing"></i></p>
             </div>
         </main>
@@ -67,7 +70,7 @@
                 <i class="bi bi-x"></i>
             </button>
             <header>
-                <h1 class="logo">CarbaShop</h1>
+                <h1 class="logo"><a href="./index.html">CarbaShop</a></h1>
             </header>
             <nav>
                 <ul class="menu">
@@ -76,7 +79,7 @@
                 </ul>
             </nav>
             <footer>
-                <p class="texto-footer">Vladimir Shmidt 2024 &copy;</p>
+                <p class="texto-footer">Luis Antonio Saburido Dasilva 2024 &copy;</p>
             </footer>
         </aside>
     </div>
