--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CarbaShop</title>
   <link rel="stylesheet" type="text/css" href="./css/comun.css" />
-  <script src="./js/login.js"></script>
+  <link rel="stylesheet" type="text/css" href="./css/login.css" />
+  <script type="text/javascript" src="./js/login.js" defer></script>
+
 </head>
 
 <body>
@@ -14,7 +16,7 @@
     <form name="formulario" id="formulario">
       <input type="text" name="nombre" id="nombre" placeholder="Login" autocomplete="off"/>
       <div id="error-nombre" class="error-message"></div>
-
+    
       <input type="password" name="password" id="password" placeholder="Contraseña"/>
       <div id="error-password" class="error-message"></div>
       <div id="botones">
