--- a/main.html
+++ b/main.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="./css/comun.css" />
     <link rel="stylesheet" type="text/css" href="./css/tienda.css" />
-    <script src="./js/shop.js"></script>
+    <script type="text/javascript" src="./js/tienda.js" defer></script>
+
 </head>
 <body>
     <div class="contenedor">
         <header class="header-mobile">
-            <h1 class="logo">CarbaShop</h1>
+            <h1 class="logo"><a href="./index.html">CarbaShop</a></h1>
             <button class="open-menu" id="open-menu">
                 <i class="bi bi-list"></i>
             </button>
@@ -21,16 +22,7 @@
             <h2 id="titulo-principal" class="titulo-principal">Todos los productos</h2>
             <div id="contenedor-productos" class="contenedor-productos">
                 <!--
-                Esta sección ha de rellenarse con JS en base al siguiente formato:
-
-                <div class="producto">
-                    <img class="producto-imagen" src="./img/portatil/01.jpg" alt="Imagen producto">
-                    <div class="producto-detalles">
-                        <h3 class="producto-titulo">Portatil 01</h3>
-                        <p class="producto-precio">$1000</p>
-                        <button class="producto-agregar">Agregar</button>
-                    </div>
-                </div>
+                Los productos son cargados aqui por el JavaScript
                 -->
             </div>
         </main>
@@ -39,7 +31,7 @@
                 <i class="bi bi-x"></i>
             </button>
             <header>
-                <h1 class="logo">CarbaShop</h1>
+                <h1 class="logo"><a href="./index.html">CarbaShop</a></h1>
             </header>
             <nav>
                 <ul class="menu">
@@ -51,7 +43,7 @@
                 </ul>
             </nav>
             <footer>
-                <p class="texto-footer">Vladimir Shmidt 2024 &copy;</p>
+                <p class="texto-footer">Vladímir Shmidt 2024/2025 &copy;</p>
             </footer>
         </aside>
     </div>
